syntax = "proto3";

package com.learn.blog;

option java_multiple_files = true;

message Blog {
    string blogId = 1;
    string title = 2;
    string content = 3;
}

message BlogRequest {
    Blog blog = 1;
}

message BlogResponse {
    Blog blog = 1;
}

message BlogByIdRequest {
    string blogId = 1;
}

service BlogService {
    rpc createBlog(BlogRequest) returns (BlogResponse) {};
    rpc getBlog(BlogByIdRequest) returns (BlogResponse) {};
    rpc updateBlog(BlogRequest) returns (BlogResponse) {};
    rpc deleteBlogById(BlogByIdRequest) returns (BlogResponse) {};
}
